# Game-Manager

./: agents.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: games.rs  launcher.rs  sync.rs
src-tauri/src/sync/: steam.rs
src/components/games/: GameCard.tsx  GameDetailPanel.tsx  GameGrid.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: ActionButton.tsx  InputField.tsx  SidebarButton.tsx
src/stores/: useGameStore.ts
