[package]
name = "game-manager"
version = "0.1.0"
description = "Kişisel Oyun Kütüphanesi Yöneticisi — Steam & Epic Games toplayıcı"
authors = ["you"]
edition = "2021"

[lib]
name = "game_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri çekirdek ve plugin'ler
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

# Serileştirme
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hata yönetimi
thiserror = "1"
anyhow = "1"

# HTTP istemci (Steam/Epic API çağrıları için)
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
